add ui_business hosting

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
     "default": "red-impluse"
-  }
+  },
+  "targets": {
+    "red-impluse": {
+      "hosting": {
+        "ui_business": [
+          "ui-business"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
