--- a/ui_business/package.json
+++ b/ui_business/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "firebase": "^11.3.1",
     "mui-tel-input": "^8.0.1",
