ui_member deploy 2025-04-14

--- a/.firebaserc
+++ b/.firebaserc
@@ -7,6 +7,9 @@
       "hosting": {
         "ui_business": [
           "ui-business"
+        ],
+        "ui_member": [
+          "red-impluse"
         ]
       }
     }
