--- a/firebase.json
+++ b/firebase.json
@@ -30,6 +30,21 @@
           "destination": "/index.html"
         }
       ]
+    },
+    {
+      "target": "ui_member",
+      "public": "ui_member/build",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
   ]
 }
